Added new Error logic and a ton of refactoring
