# src/lib/api/v1/routes/auth.js
@@ -1,58 +1,51 @@
+// import env from "../../../utils/environment.js";
 import { setStdRespHeaders } from "../middleware/index.js";
-import * as controller from '../controller/auth.js';
+import { validateAdminApiKey } from "../middleware/auth.js";
+import * as controller from "../controller/auth.js";
 
 import { log4js } from "../../../../utils/log4js.js";
 const logger = log4js.getLogger("[routes|auth]"); // Sets up the logger with the [app] string prefix
 
 /**
- * Authenticat the token 
- * 
- * @param {*} req 
- * @param {*} res 
- * @returns 
+ * Authenticate the given ApiKey and return a valid access_token
+ *
+ * @param {*} req
+ * @param {*} res
+ * @returns access_token The user will use this access_token in order to do anything within the API
  */
 const getAccessToken = async (req, res) => {
-    logger.trace("getAccessToken");
-    const [ statusCode, response ] = await controller.fetchAccessToken(req);
-    return res.status(statusCode).send(JSON.stringify(response));
-}
+  logger.trace("getAccessToken");
+  const [statusCode, response] = await controller.fetchAccessToken(req);
+  return res.status(statusCode).send(JSON.stringify(response));
+};
 
 /**
  * Create a new API key in the Apikey table
- *  
- * @TODO: There needs to be a lot of extra validation to verify that only
- * the sysem admin is creating the APIkeys
- * Need to make route PRIVATE
- * 
- * @param {*} req 
- * @param {*} res 
- * @returns 
+ * Currently using the master KEY in the env file, this needs to be updated to use an Auth Token
+ *
+ * @TODO 
+ * - Need to make this route PRIVATE in the documentation
+ * - Need to assign the new key to the user record when it is created
+ * - The specification limit on the User ID needs to be raised in the event there are more than the listed amount of users
+ *
+ * @param {*} req
+ * @param {*} res
+ * @returns apiKey The newly created apiKey
  */
 const createApiKey = async (req, res) => {
-    logger.trace("createApiKey:", req?.body?.name);
-    const { apiKey } = req.body;
-    if (!apiKey) {
-        return res.status(400).json({ error: 'json {apiKey} missing from request body' });
-    }
+  logger.trace("createApiKey:", req?.body?.admin_apiKey);
+  logger.trace("user:", req?.params?.userId);
 
-    // Validate APIkey in User DB
-    if (!await controller.validateApiKey(apiKey)) {
-        return res.status(401).json({ error: 'json Invalid API key' });
-    }
+  // # Lookup User (
+  // @TODO: Validate the user exists, is Active and is not Deleted or Suspended
+  // if (user is invalid)
+  // return 401
 
-    const [ statusCode, response ] = await controller.generateApiKey();
-
-    // Return apikey
-    return res.status(statusCode).send(JSON.stringify(response));
-}
+  const [statusCode, response] = await controller.generateApiKey(req?.params?.userId);
+  return res.status(statusCode).send(JSON.stringify(response));
+};
 
 export default {
-    createApiKey: [
-        setStdRespHeaders,
-        createApiKey
-    ],
-    getAccessToken: [
-        setStdRespHeaders,
-        getAccessToken
-    ]
+  createApiKey: [setStdRespHeaders, validateAdminApiKey, createApiKey],
+  getAccessToken: [setStdRespHeaders, getAccessToken],
 };
